<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.pedro.proyecto_pgl_2018.LoginPrincipal">


    <TextView

        android:id="@+id/textView_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Inicio_Formulario"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:gravity="center_horizontal"

         />

    <TextView
        android:id="@+id/TextBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView_Start"
        android:layout_marginTop="10dp"
        android:textSize="30dp"

        />

    <EditText
        android:id="@+id/editText_Nombre_Login"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Login_name"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/editText_Nombre_Login"
        android:layout_alignLeft="@+id/editText_Nombre_Login"
        android:layout_alignStart="@+id/editText_Nombre_Login"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/Login_password"
        android:inputType="textPassword"
        android:textSize="18dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/Boton_Login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"

        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#fff"
                android:layout_centerInParent="true"
                android:textSize="18dp"

                />


        </RelativeLayout>
    </android.support.v7.widget.CardView>



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="91dp"

        android:text="@string/Register" />


</RelativeLayout>